@@ -1,29 +1,50 @@
-import java.util.ArrayDeque;
+import java.util.ArrayList;
 
 public class Buffer {
 
-    private ArrayDeque<Proceso> fila;
+    private ArrayList<Proceso> fila;
 
     public Buffer() {
-        fila = new ArrayDeque<>();
+        this.fila = new ArrayList<>();
     }
 
     public void AñadirProceso(Proceso proceso) {
-        fila.addLast(proceso);
+        fila.add(fila.size(), proceso);
+        System.out.println("Se añadio un proceso");
+        state();
     }
 
-    public Proceso MandarProcesador(boolean procesando) {
-        if (!procesando && !fila.isEmpty()) {
-            return fila.removeFirst();
+    public void AñadirProceso(Proceso proceso, int index) {
+        fila.add(index, proceso);
+        System.out.println("Se añadio un proceso");
+        state();
+    }
+
+    public Proceso mandarProcesar() {
+        if (!fila.isEmpty()) {
+            return fila.remove(fila.size() - 1);
         } else {
             return null;
         }
     }
 
-    @Override
-    public String toString() {
-        return "Buffer{" +
-                "fila = " + fila +
-                '}';
+    public void state() {
+        System.out.println("Buffer {");
+        for (Proceso p : fila) {
+            System.out.println(p.toString());
+        }
+        System.out.println("}");
+    }
+
+    public boolean isEmpty() {
+        return fila.isEmpty();
+    }
+
+    public int size() {
+        return fila.size();
+    }
+
+    public Proceso get(int index) {
+        return fila.get(index);
     }
 }
